[package]
edition = "2021"
name = "honjitsu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
chrono-tz = "0.8.0"
dotenv = "0.15.0"
egg-mode = "0.16.0"
env_logger = "0.9.3"
log = "0.4.17"
pretty_assertions = {version = "1.3.0", default-features = false, features = ["alloc"]}
regex = "1.6.0"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tokio = {version = "1.20.1", features = ["full"]}
